# rust-ecs-poc

./: .gitignore  Cargo.toml  LICENSE  README.md  imported_component.json
.github/workflows/: publish.yml  rust.yml
config/: logging.yml
docs/: APIS.md  COMPONENTS.md  ENTITY_INSTANCE.md  EntityTypes.mmd  IDEAS.md  PROPERTIES.md  RES.md  SERDE.md  TODO.md
src/: bidule.rs  main.rs
src/api/: component_manager.rs  entity_behaviour_manager.rs  entity_instance_manager.rs  entity_instance_vertex_manager.rs  entity_type_manager.rs  entity_vertex_manager.rs  flow_manager.rs  graph_database.rs  js_engine.rs  mod.rs  property_instance_accessor.rs  reactive_entity_instance_manager.rs  reactive_flow_manager.rs  reactive_property_instance_manager.rs  reactive_relation_instance_manager.rs  relation_behaviour_manager.rs  relation_edge_manager.rs  relation_instance_manager.rs  relation_type_manager.rs  system_constants_initializer.rs
src/application/: application.rs
src/behaviour/: arithmetic_gate_behaviour.rs  logical_gate_behaviour.rs  mod.rs  numeric_operation_behaviour.rs  reactive_entity_instance_behaviour.rs
src/bidule/: bidule.rs  mod.rs
src/builder/: default_connector_builder.rs  entity_instance_builder.rs  entity_type_builder.rs  entity_vertex_builder.rs  flow_builder.rs  mod.rs  reactive_entity_instance_builder.rs  reactive_relation_instance_builder.rs  relation_edge_builder.rs  relation_instance_builder.rs  relation_type_builder.rs
src/di/: di_container.rs
src/entity_system/: mod.rs
src/implementation/: component_manager_impl.rs  entity_behaviour_manager_impl.rs  entity_instance_manager_impl.rs  entity_instance_vertex_manager_impl.rs  entity_type_manager_impl.rs  entity_vertex_manager_impl.rs  flow_manager_impl.rs  graph_database_impl.rs  js_engine_impl.rs  mod.rs  reactive_entity_instance_manager_impl.rs  reactive_flow_manager_impl.rs  reactive_relation_instance_manager_impl.rs  relation_behaviour_manager_impl.rs  relation_edge_manager_impl.rs  relation_instance_manager_impl.rs  relation_type_manager_impl.rs  system_constants_initializer_impl.rs
src/model/: component.rs  connector.rs  data_type.rs  entity_instance.rs  entity_type.rs  flow.rs  mod.rs  property_type.rs  reactive_entity_instance.rs  reactive_flow.rs  reactive_property_instance.rs  reactive_relation_instance.rs  relation_instance.rs  relation_type.rs  socket_type.rs
src/reactive/: arithmetic_gate.rs  connector.rs  const_value.rs  expression.rs  logical_gate.rs  mod.rs  numeric_gate.rs  numeric_operation.rs  simple_closure.rs  (+1 more)
(+285 files in other folders)
