[package]
name = "rust-ecs-poc"
description = "Inexor Reactive Entity Component System --- Proof of Concept"
version = "0.1.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = ["entity", "entity system", "entity component system", "graph database", "reactive"]
categories = ["game-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
log = { version = "0.4", features = ["std", "serde"] }
uuid = { version = "0.8.1", features = ["serde"] }
waiter_di = { version = "1.6.4", features = [ "async" ] }
async-trait = "0.1"
async-std = { version = "1.8", features = ["attributes"] }
lazy_static = "1.4.0"
serde = { version = "1.0.115", features = [ "derive" ] }
serde_json = "1.0.61"
bidule = "0.2.0"
deno_core = "0.75.0"
anyhow = "1.0.37"
include-flate = "0.1.3"
indradb-lib = "1"
rust-embed = { version = "5.7.0", features = ["debug-embed", "compression"] }
num_cpus = "1.13.0"
strum = { version = "0.20", features = ["derive", "strum_macros"] }
syn = "=1.0.57"
random-string = "0.1.2"
